<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292828"
    tools:context=".pg6">

    <Button
        android:id="@+id/prev6"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:backgroundTint="#602749"
        android:text="@string/pg1_prev"
        android:textAllCaps="false"
        android:textColor="#FF6A1F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/next6"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:backgroundTint="#602749"
        android:text="@string/pgf"
        android:textAllCaps="false"
        android:textColor="#FF6A1F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fin"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation4"
        android:layout_width="287dp"
        android:layout_height="298dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609"
        app:lottie_autoPlay="true"
        app:lottie_fileName="end.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>