<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292828"
    tools:context=".pg3">

    <TextView
        android:id="@+id/hp3"
        android:layout_width="356dp"
        android:layout_height="125dp"
        android:text="@string/pg3_historia"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <Button
        android:id="@+id/prev3"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:backgroundTint="#602749"
        android:text="@string/pg1_prev"
        android:textAllCaps="false"
        android:textColor="#FF6A1F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/next3"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:backgroundTint="#602749"
        android:text="@string/pg1_next"
        android:textAllCaps="false"
        android:textColor="#FF6A1F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="760dp"
        android:layout_height="731dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/next3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bosque_noche_oscura_1308_18227"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="377dp"
        android:layout_height="538dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        app:srcCompat="@drawable/cabain" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="201dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.662"
        app:srcCompat="@drawable/character" />
</androidx.constraintlayout.widget.ConstraintLayout>